[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m2dtools"
version = "0.1.0"
description = "Multiscale MD tools: pre/post-processing for molecular dynamics simulations"
authors = [
    { name="Zheng Yu" },
    { name="CZ" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "numba",
    "networkx",
    "joblib",
    "pyyaml",
    "seaborn",
    "scienceplots",
]
license = { file = "LICENSE" }

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["m2dtools*"]

[project.scripts]
m2d-subsample-dump = "m2dtools.lmp.subsample_dump:main"
m2d-update-coords = "m2dtools.lmp.update_coords:main"

[project.urls]
Homepage = "https://github.com/zyumse/m2dtools"
Documentation = "https://zyumse.github.io/m2dtools/"
Source = "https://github.com/zyumse/m2dtools"

